--- a/front/package.json
+++ b/front/package.json
@@ -14,7 +14,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
