--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,121 +1,11 @@
-aiohttp==3.9.5
-aiosignal==1.3.1
-anaconda-anon-usage @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_3eler6mjxh/croot/anaconda-anon-usage_1710965076906/work
-annotated-types==0.6.0
-anyio==4.3.0
 apify_client==1.6.4
-apify_shared==1.1.1
-archspec @ file:///croot/archspec_1709217642129/work
-attrs==23.2.0
 beautifulsoup4==4.12.3
-blinker==1.8.0
-boltons @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/boltons_1699240838368/work
-Brotli @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/brotli-split_1699237319520/work
-cachetools==5.3.3
-certifi @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_3bzbkiv4h_/croot/certifi_1707229182618/work/certifi
-cffi @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_b4nang6w_y/croot/cffi_1700254307954/work
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
-click==8.1.7
-cryptography @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_19nb9xvs53/croot/cryptography_1710350362185/work
-dataclasses-json==0.6.4
-Deprecated==1.2.14
-dirtyjson==1.0.8
-distro @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/distro_1701803554172/work
-Flask==3.0.3
-frozenlist==1.4.1
-fsspec==2024.3.1
-google-ai-generativelanguage==0.6.2
-google-api-core==2.18.0
-google-api-python-client==2.127.0
-google-auth==2.29.0
-google-auth-httplib2==0.2.0
-google-generativeai==0.5.2
-googleapis-common-protos==1.63.0
-greenlet==3.0.3
-grpcio==1.62.2
-grpcio-status==1.62.2
-h11==0.14.0
-httpcore==1.0.5
-httplib2==0.22.0
-httpx==0.27.0
-idna @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/idna_1699237644810/work
-itsdangerous==2.2.0
-Jinja2==3.1.3
-joblib==1.4.0
-jsonpatch @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_14fkybcjic/croot/jsonpatch_1710807510523/work
-jsonpointer==2.1
-libmambapy @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_5ehthp6vi7/croot/mamba-split_1712091921232/work/libmambapy
-llama-index==0.10.32
-llama-index-agent-openai==0.2.3
-llama-index-cli==0.1.12
-llama-index-core==0.10.32
-llama-index-embeddings-openai==0.1.9
-llama-index-indices-managed-llama-cloud==0.1.6
-llama-index-legacy==0.9.48
-llama-index-llms-openai==0.1.16
-llama-index-multi-modal-llms-openai==0.1.5
-llama-index-program-openai==0.1.6
-llama-index-question-gen-openai==0.1.3
-llama-index-readers-file==0.1.19
-llama-index-readers-llama-parse==0.1.4
-llama-parse==0.4.2
-llamaindex-py-client==0.1.19
-MarkupSafe==2.1.5
-marshmallow==3.21.1
-menuinst @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_26a7xsau78/croot/menuinst_1706732941263/work
-multidict==6.0.5
-mypy-extensions==1.0.0
-nest-asyncio==1.6.0
-networkx==3.3
+Flask==2.3.2
+huggingface_hub==0.20.3
+llama_index==0.10.32
 nltk==3.8.1
-numpy==1.26.4
-openai==1.23.6
-outcome==1.3.0.post0
-packaging @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a6lqg7at4g/croot/packaging_1710807410750/work
-pandas==2.2.2
-pillow==10.3.0
-platformdirs @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/platformdirs_1701803010714/work
-pluggy @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/pluggy_1699237243543/work
-proto-plus==1.23.0
-protobuf==4.25.3
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pycosat @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/pycosat_1699241479669/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-pydantic==2.7.1
-pydantic_core==2.18.2
-pyparsing==3.1.2
-pypdf==4.2.0
-PySocks @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/pysocks_1699237568675/work
-python-dateutil==2.9.0.post0
-pytz==2024.1
-PyYAML==6.0.1
-regex==2024.4.16
-requests @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_b3tnputioh/croot/requests_1707355573919/work
-rsa==4.9
-ruamel.yaml @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/ruamel.yaml_1699241608430/work
+protobuf==5.26.1
+Requests==2.31.0
 selenium==4.20.0
-setuptools==68.2.2
-six==1.16.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.5
-SQLAlchemy==2.0.29
-striprtf==0.0.26
-tenacity==8.2.3
-tiktoken==0.6.0
-tqdm==4.66.2
-trio==0.25.0
-trio-websocket==0.11.1
-truststore @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/truststore_1701805928787/work
-typing-inspect==0.9.0
-typing_extensions==4.11.0
-tzdata==2024.1
-uritemplate==4.1.1
-urllib3 @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_aff2m3lasf/croot/urllib3_1707770561896/work
-Werkzeug==3.0.2
-wheel==0.41.2
-wrapt==1.16.0
-wsproto==1.2.0
-yarl==1.9.4
-zstandard @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/zstandard_1699238791645/work
+torch==2.2.0
+transformers==4.37.2
